--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "file-generator-task-runner",
   "displayName": "File Generator Task Runner",
   "version": "1.1.3",
+  "packageManager": "pnpm@9.6.0",
   "description": "An extension to quickly generate new file base on the original file with new extension or .",
   "author": {
     "name": "mo doaie",
