--- a/package.json
+++ b/package.json
@@ -327,6 +327,8 @@
     "mkdirp": "^3.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@pixpilot/dev-config": "^2.1.0",
     "@types/node": "^24.2.1",
     "@vitest/coverage-istanbul": "^3.2.4",
