fix(lint): update format command in package.json and lint-staged config
* Changed `format:write` to `format:fix` for consistency in formatting commands.
* Ensured lint-staged configuration aligns with updated script commands.

--- a/package.json
+++ b/package.json
@@ -305,9 +305,9 @@
     "postinstall": "node ./node_modules/vscode/bin/install",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "format:check": "prettier --check .",
-    "format:write": "prettier --write .",
-    "fix:all": "pnpm run lint:fix && npm run format:write",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "fix:all": "pnpm run lint:fix && npm run format:fix",
     "test": "vitest run --coverage",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
