--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "publisher": "m.doaie",
+  "publisher": "mdoaie",
   "name": "file-generator-task-runner",
   "displayName": "File Generator Task Runner",
   "version": "1.1.3",
@@ -297,8 +297,8 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "npm run clean && tsc -p ./tsconfig.build.json",
+    "vscode:prepublish": "pnpm run compile",
+    "compile": "pnpm run clean && tsc -p ./tsconfig.build.json",
     "watch": "tsc -p ./tsconfig.build.json --watch",
     "tsc:watch": "tsc -p ./ --watch --noEmit",
     "clean": "rimraf ./out",
@@ -307,7 +307,7 @@
     "lint:fix": "eslint --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "fix:all": "pnpm run lint:fix && npm run format:fix",
+    "fix:all": "pnpm run lint:fix && pnpm run format:fix",
     "test": "vitest run --coverage",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -316,7 +316,9 @@
     "deps:update": "npx taze -r -w && pnpm install",
     "deps:update:major": "npx taze major -r -w && pnpm install",
     "prepare": "husky",
-    "build": "pnpm run compile"
+    "build": "pnpm run compile",
+    "package:vsix": "pnpm exec vsce package --no-dependencies",
+    "install:local": "pnpm run package:vsix && pwsh -c \"code --install-extension (Get-ChildItem *.vsix | Select-Object -First 1).Name\""
   },
   "dependencies": {
     "@pixpilot/eslint-config": "^2.4.2",
@@ -334,6 +336,7 @@
     "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "@vscode/vsce": "^3.6.0",
     "eslint": "^9.33.0",
     "husky": "^9.1.7",
     "jiti": "^2.5.1",
