--- a/package.json
+++ b/package.json
@@ -318,7 +318,8 @@
     "prepare": "husky",
     "build": "pnpm run compile",
     "package:vsix": "pnpm exec vsce package --no-dependencies",
-    "install:local": "pnpm run package:vsix && pwsh -c \"code --install-extension (Get-ChildItem *.vsix | Select-Object -First 1).Name\""
+    "install:local:win": "pnpm run package:vsix && pwsh -c \"code --install-extension (Get-ChildItem *.vsix | Select-Object -First 1).Name\"",
+    "install:local": "pnpm run package:vsix && node -e \"const fs = require('fs'); const vsix = fs.readdirSync('.').find(f => f.endsWith('.vsix')); if(vsix) require('child_process').execSync('code --install-extension ' + vsix, {stdio: 'inherit'}); else console.error('No .vsix file found');\""
   },
   "dependencies": {
     "@pixpilot/eslint-config": "^2.4.2",
