--- a/package.json
+++ b/package.json
@@ -302,7 +302,6 @@
     "watch": "tsc -p ./tsconfig.build.json --watch",
     "tsc:watch": "tsc -p ./ --watch --noEmit",
     "clean": "rimraf ./out",
-    "postinstall": "node ./node_modules/vscode/bin/install",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --check .",
@@ -334,6 +333,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@pixpilot/dev-config": "^2.1.0",
     "@types/node": "^24.2.1",
+    "@types/vscode": "^1.89.0",
     "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -346,7 +346,7 @@
     "rimraf": "^6.0.1",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
-    "vscode": "^1.1.37"
+    "vscode-test": "^1.6.1"
   },
   "__metadata": {
     "size": 62358128
