--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "main": "./out/extension",
   "engines": {
     "pnpm": ">=9.6.0",
-    "vscode": "^1.24.1"
+    "vscode": "^1.89.0"
   },
   "activationEvents": [
     "onLanguage:typescript",
@@ -316,7 +316,7 @@
     "deps:update:major": "npx taze major -r -w && pnpm install",
     "prepare": "husky",
     "build": "pnpm run compile",
-    "package:vsix": "pnpm exec vsce package --no-dependencies",
+    "package:vsix": "pnpm exec vsce package",
     "install:local:win": "pnpm run package:vsix && pwsh -c \"code --install-extension (Get-ChildItem *.vsix | Select-Object -First 1).Name\"",
     "install:local": "pnpm run package:vsix && node -e \"const fs = require('fs'); const vsix = fs.readdirSync('.').find(f => f.endsWith('.vsix')); if(vsix) require('child_process').execSync('code --install-extension ' + vsix, {stdio: 'inherit'}); else console.error('No .vsix file found');\""
   },
