chore: update package version to 2.0.0 and change main entry point to ./dist/extension

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "types": ["vitest/globals"],
     "strict": true,
     "noUnusedLocals": true,
-    "outDir": "out",
+    "noEmit": true,
+    "outDir": "dist",
     "sourceMap": true,
     "esModuleInterop": true
   },
