--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,11 @@
       "request": "launch",
       "runtimeExecutable": "${execPath}",
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
-      "outFiles": ["${workspaceFolder}/out/**/*.js"],
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
       "preLaunchTask": "npm: watch",
       "sourceMaps": true,
       "smartStep": false,
-      "resolveSourceMapLocations": ["${workspaceFolder}/out/**/*.js", "!**/node_modules/**"],
+      "resolveSourceMapLocations": ["${workspaceFolder}/dist/**/*.js", "!**/node_modules/**"],
       "trace": false
     },
     {
@@ -24,11 +24,11 @@
       "request": "launch",
       "runtimeExecutable": "${execPath}",
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
-      "outFiles": ["${workspaceFolder}/out/**/*.js"],
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
       "preLaunchTask": "npm: compile",
       "sourceMaps": true,
       "smartStep": false,
-      "resolveSourceMapLocations": ["${workspaceFolder}/out/**/*.js", "!**/node_modules/**"],
+      "resolveSourceMapLocations": ["${workspaceFolder}/dist/**/*.js", "!**/node_modules/**"],
       "trace": false
     }
   ]
