--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "publisher": "mdoaie",
   "name": "file-generator-task-runner",
   "displayName": "File Generator Task Runner",
-  "version": "1.1.3",
-  "packageManager": "pnpm@9.6.0",
+  "version": "2.0.0",
   "description": "An extension to quickly generate new file base on the original file with new extension or .",
   "author": {
     "name": "mo doaie",
@@ -29,9 +28,8 @@
     "Snippets",
     "Other"
   ],
-  "main": "./out/extension",
+  "main": "./dist/extension",
   "engines": {
-    "pnpm": ">=9.6.0",
     "vscode": "^1.89.0"
   },
   "activationEvents": [
@@ -297,11 +295,10 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "compile": "pnpm run clean && tsc -p ./tsconfig.build.json",
-    "watch": "tsc -p ./tsconfig.build.json --watch",
+    "compile": "pnpm run fix:all &&  node esbuild.js",
+    "watch": "node esbuild.js --watch",
     "tsc:watch": "tsc -p ./ --watch --noEmit",
-    "clean": "rimraf ./out",
+    "clean": "rimraf ./dist",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --check .",
@@ -316,8 +313,7 @@
     "deps:update:major": "npx taze major -r -w && pnpm install",
     "prepare": "husky",
     "build": "pnpm run compile",
-    "package:vsix": "pnpm exec vsce package",
-    "install:local:win": "pnpm run package:vsix && pwsh -c \"code --install-extension (Get-ChildItem *.vsix | Select-Object -First 1).Name\"",
+    "package:vsix": "node esbuild.js --production && npx vsce package --no-dependencies",
     "install:local": "pnpm run package:vsix && node -e \"const fs = require('fs'); const vsix = fs.readdirSync('.').find(f => f.endsWith('.vsix')); if(vsix) require('child_process').execSync('code --install-extension ' + vsix, {stdio: 'inherit'}); else console.error('No .vsix file found');\""
   },
   "dependencies": {
@@ -338,6 +334,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vscode/vsce": "^3.6.0",
+    "esbuild": "^0.25.9",
     "eslint": "^9.33.0",
     "husky": "^9.1.7",
     "jiti": "^2.5.1",
